# qtcreator-plugin-icontheme

./: .gitignore  CMakeLists.txt  README.md  icontheme.json.in  icontheme.qrc  plugin.cpp  plugin.h  plugin.mm
.github/workflows/: ci.yml
icons/qtcreator-nomo/: index.theme
